<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/lightgreyBackground"
    tools:context=".InformacionPokemon">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border_layout_titulos"
                android:orientation="vertical">

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="13dp" />

                <TextView
                    android:id="@+id/txtNombrePokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nombre_pokemon"
                    android:textSize="28dp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="17dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="203dp"
                        android:background="@drawable/border_layout_images"
                        android:orientation="horizontal">
                        <!--
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgPokemon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="2dp"
                    android:padding="10dp"/>
                    -->

                        <ImageView
                            android:id="@+id/imgPokemon"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center" />
                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="17dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/border_layout"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/altura"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtAltura"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/peso"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtPeso"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="26dp" />

                    <LinearLayout
                        android:layout_width="315dp"
                        android:layout_height="109dp"
                        android:layout_gravity="center"
                        android:background="@drawable/border_layout"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/huevo"
                            android:gravity="center"
                            android:text="@string/tipo"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtTipo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textSize="20dp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="29dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:layout_gravity="center"
                        android:background="@drawable/border_layout"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/stats64"
                            android:gravity="center"
                            android:text="@string/habilidades"
                            android:textColor="@color/black"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtHabilidades"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:textColor="@color/black"
                            android:textSize="15dp" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="32dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnStats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="25px"
                            android:layout_weight="3"
                            android:background="@drawable/border_layout_rojo"
                            android:drawableLeft="@drawable/pokeball32"
                            android:paddingLeft="20dp"
                            android:text="@string/stats" />

                        <Button
                            android:id="@+id/btnVolver"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/border_layout"
                            android:drawableLeft="@drawable/volver32"
                            android:text="@string/volver"
                            android:textColor="@color/black" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
